--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "graphql": "^16.10.0",
+    "graphql-upload": "14",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "ts-morph": "^24.0.0"
@@ -44,6 +45,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
+    "@types/graphql-upload": "^17.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
