--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@prisma/client": "^6.1.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
